achtergrond toegevoegd aan body

--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,7 @@
 body {
-    background-size: cover;
-    background-color: rgb(181, 213, 186);
+    background-size: initial;
+    background-image: url("../img/beige_wall_001_nor_dx_1k.jpg");
+    background-color: rgb(225, 255, 224);
     background-blend-mode: luminosity;
     font-family: "Mukta", sans-serif;
     box-sizing: border-box;
